🐛 Fixing overflow

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -7,7 +7,6 @@
 
   html {
     font-family: 'Inter', sans-serif;
-    overflow-y: hidden;
   }
 
   .disabled-node {
